--- a/src/pages/ProductInfo/CompanyContact/styles.module.css
+++ b/src/pages/ProductInfo/CompanyContact/styles.module.css
@@ -1,14 +1,29 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 .companyContact {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     padding: 24px;
     border-radius: 4px;
     border: 1px solid #E1E1E1;
     gap: 52px;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
     width: 680px;
 }
 .companyRating {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     gap: 6px;
     margin-bottom: 15px;
@@ -22,25 +37,21 @@
 .companyName {
     overflow: hidden;
     color: #000;
-    font-family: SF Pro Display;
     font-size: 24px;
-    font-style: normal;
     font-weight: 500;
-    line-height: normal;
     margin-bottom: 4px;
 }
 .companyProduct {
     overflow: hidden;
     color: #121212;
-    font-family: SF Pro Display;
     font-size: 13px;
-    font-style: normal;
     font-weight: 400;
-    line-height: normal;
     opacity: 0.3;
     margin-bottom: 6px;
 }
 .companyInfo {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 .mailButton {
@@ -48,12 +59,13 @@
     background: #1876F2;
     padding: 20px 33px;
     color: #FFF;
-    font-family: SF Pro Display;
     font-size: 18px;
     font-style: normal;
     font-weight: 500;
     line-height: 20px;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     margin-bottom: 16px;
 }
@@ -61,14 +73,24 @@
     border-radius: 6px;
     background: #F5F5F5;
     color: #121212;
-    font-family: SF Pro Display;
     font-size: 18px;
-    font-style: normal;
     font-weight: 500;
     line-height: 20px;
     padding: 20px 22px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+}
+
+.companyImg {
+    width: 77px;
+    height: 77px;
+    object-fit: cover;
+    object-position: center center;
+    border-radius: 50%;
 }
 @media screen and (max-width: 1150px) {
     .companyContact {
@@ -77,6 +99,9 @@
 }
 @media screen and (max-width: 740px) {
     .companyContact {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
         flex-direction: column;
         max-width: 355px;
         padding: 33px 16px;
