--- a/src/pages/ProductInfo/ProductDeatails/styles.module.css
+++ b/src/pages/ProductInfo/ProductDeatails/styles.module.css
@@ -5,7 +5,6 @@
 }
 .description {
     color: #121212;
-    font-family: SF Pro Display;
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
@@ -15,25 +14,20 @@
 }
 .descriptionText {
     color: #121212;
-    font-family: SF Pro Display;
     font-size: 16px;
-    font-style: normal;
     font-weight: 400;
-    line-height: normal;
 }
 .productRating {
     display: flex;
     margin-bottom: 30px;
     align-items: center;
+    gap: 15px;
 }
 .productName {
     margin-bottom: 15px;
     color: #000;
-    font-family: SF Pro Display;
     font-size: 42px;
-    font-style: normal;
     font-weight: 500;
-    line-height: normal;
 }
 .productDetails {
     display: flex;
@@ -51,11 +45,8 @@
     padding: 8px 16px;
     background: none;
     color: #121212;
-    font-family: SF Pro Display;
     font-size: 16px;
-    font-style: normal;
     font-weight: 400;
-    line-height: normal;
     cursor: pointer;
 }
 @media screen and (max-width: 1150px) {
