--- a/src/pages/ProductInfo/ProductImage/styles.module.css
+++ b/src/pages/ProductInfo/ProductImage/styles.module.css
@@ -17,6 +17,16 @@
     column-gap: 33px;
     row-gap: 20px;
 }
+
+.productTypes img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    object-position: center center;
+    border-radius: 100px;
+    border: 1px solid #E1E1E1;
+    cursor: pointer;
+}
 @media screen and (max-width: 1150px) {
     .productImage {
         width: 728px;
