fix select for ios

--- a/src/components/CountrySelect/styles.module.css
+++ b/src/components/CountrySelect/styles.module.css
@@ -23,3 +23,13 @@
       width: 290px;
     }
   }
+.countrySelect_box {
+  position: relative;
+  
+}
+.selectIcon {
+  position: absolute;
+  top: 20px;
+  right: 10px;
+}
+
