--- a/src/layouts/mainLayout/components/Header/styles.module.css
+++ b/src/layouts/mainLayout/components/Header/styles.module.css
@@ -43,8 +43,20 @@
 .languageChange_select {
   font-size: 16px;
   margin-right: 14px;
+  width: 40px;
+  /* height: 50px; */
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
-
+.languageChange_select:active, :focus {
+  outline: none;
+  box-shadow: none;
+}
+.languageChange_select option {
+  font: 16px Cursive;
+  height: 50px 
+}
 .headerFisrtButton {
   background: #f5f5f5;
   padding: 20px 36px;
@@ -52,6 +64,7 @@
   font-weight: 500;
   font-size: 18px;
   margin: 0 16px 0 26px;
+  
 }
 
 .headerFisrtButton:hover {
