--- a/src/pages/Producers/components/Filter/FilterGroup/styles.module.css
+++ b/src/pages/Producers/components/Filter/FilterGroup/styles.module.css
@@ -41,6 +41,12 @@
     font-weight: 500;
     line-height: normal;
 }
+.filterTool {
+    padding: 52px 26px;
+    border-radius: 4px;
+    border: 1px solid #DDD;
+    background-color: #FFF;
+}
 @media screen and (max-width: 640px) {
     .filter {
         width: 355px;
