fix buttons, add hrefs

--- a/src/components/HeroForm/styles.module.css
+++ b/src/components/HeroForm/styles.module.css
@@ -46,6 +46,7 @@
   font-style: normal;
   font-weight: 500;
   line-height: 20px;
+  cursor: pointer;
 }
 @media screen and (max-width: 800px) {
   .formContainer {
