--- a/src/layouts/mainLayout/components/Header/styles.module.css
+++ b/src/layouts/mainLayout/components/Header/styles.module.css
@@ -34,7 +34,9 @@
   justify-content: flex-end;
   width: 100%;
 }
+.headerMiniLogo {
 
+}
 .languageChange {
   display: flex;
   align-items: center;
@@ -66,7 +68,7 @@
   margin: 0 16px 0 26px;
   
 }
-
+    
 .headerFisrtButton:hover {
   cursor: pointer;
 }
@@ -79,6 +81,7 @@
   font-weight: 500;
   font-size: 18px;
   color: #fff;
+  cursor: pointer;
 }
 
 .headerSecondButton:hover {
@@ -93,7 +96,10 @@
   border: 1px solid #E1E1E1;
   background-color: transparent;
 }
-
+.headerMiniLogo {
+  width: 110px;
+  height: 80px;
+}
 @media screen and (max-width: 1270px){
   .header {
     padding: 30px 20px;
@@ -112,6 +118,16 @@
 
 @media screen and (max-width: 640px) {
   .headerSecondButton {
+    display: none;
+  }
+}
+@media screen and (max-width: 700px) {
+  .headerLogo {
+    display: none;
+  }
+}
+@media screen and (min-width: 701px) {
+  .headerMiniLogo {
     display: none;
   }
 }
