--- a/src/pages/ProductInfo/CompanyContact/styles.module.css
+++ b/src/pages/ProductInfo/CompanyContact/styles.module.css
@@ -68,6 +68,7 @@
     -ms-flex-align: center;
     align-items: center;
     margin-bottom: 16px;
+    cursor: pointer;
 }
 .phoneButton {
     border-radius: 6px;
@@ -83,6 +84,7 @@
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+    cursor: pointer;
 }
 
 .companyImg {
