--- a/src/pages/Product/components/Products/styles.module.css
+++ b/src/pages/Product/components/Products/styles.module.css
@@ -1,6 +1,7 @@
 .productsCard {
     text-align: center;
     margin-bottom: 18px;
+    cursor: pointer;
 }
 .productImage {
     margin-bottom: 17px;
