--- a/src/layouts/mainLayout/components/Footer/styles.module.css
+++ b/src/layouts/mainLayout/components/Footer/styles.module.css
@@ -93,6 +93,12 @@
   .footerContent {
     gap: 50px
   }
+  .developerRights {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 18px;
+  }
 }
 @media screen and (max-width: 820px) {
   .footerSocial_icon {
