--- a/src/pages/Home/components/Contact/styles.module.css
+++ b/src/pages/Home/components/Contact/styles.module.css
@@ -105,6 +105,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-left: 0;
   }
   .contactMap {
     width: 355px;
