add new features

--- a/src/pages/Home/components/ProductCategory/styles.module.css
+++ b/src/pages/Home/components/ProductCategory/styles.module.css
@@ -58,6 +58,7 @@
   font-weight: 400;
   line-height: normal;
   margin-bottom: 12px;
+  cursor: pointer;
 }
 .productCategory_card {
   /* margin-right: 76px; */
