do custom select

--- a/src/components/SearchProduct/styles.module.css
+++ b/src/components/SearchProduct/styles.module.css
@@ -32,7 +32,7 @@
     line-height: normal;
     padding: 22px;
     margin-bottom: 20px;
-    width: 457px;
+    width: 446px;
   }
 .productSearch_button {
     color: #121212;
@@ -99,10 +99,49 @@
     font-weight: 500;
     line-height: normal;
 }
+
+.selectCategory_box1 {
+    position: relative;
+    border-radius: 6px;
+    border: 1px solid #DDD;
+    background: #FFF;
+    padding-right: 22px;
+    width: 446px;
+    margin-bottom: 8px;
+    padding: 22px 26px;
+    user-select: none;
+}
+.custom1 {
+    position: absolute;
+    z-index: 2;
+    border-radius: 6px;
+    border: 1px solid #DDD;
+    background: #FFF;
+    width: 446px;
+    margin-bottom: 8px;
+    display: flex;
+    flex-direction: column;
+    max-height: 100px;
+    overflow: overlay;
+}
+.custom1::-webkit-scrollbar {
+    display: none;
+}
+.custom2 {
+    cursor: pointer;
+    padding: 20px 26px;
+    border-bottom: 1px #DDD solid;
+}
+.custom2:hover {
+    background-color: #1876F2;
+    color: #FFF;
+    border-bottom: none;
+}
 @media screen and (max-width: 820px) {
     .productSearchCard {
         width: 728px;
     }
+    
 }
 @media screen and (max-width: 740px) {
     .productSearch_title {
@@ -132,6 +171,12 @@
     .productSearch_button {
         width: 300px;
     }
+    .selectCategory_box1 {
+        width: 330px;
+    }
+    .custom1 {
+        width: 330px;
+    }
 }
 @media screen and (max-width: 370px) {
     .productSearchCard {
@@ -153,36 +198,10 @@
     .productSearch_button {
         width: 290px;
     }
-}
-.selectCategory_box1 {
-    position: relative;
-    border-radius: 6px;
-    border: 1px solid #DDD;
-    background: #FFF;
-    padding-right: 22px;
-    width: 446px;
-    margin-bottom: 8px;
-    padding: 22px 26px;
-}
-.custom1 {
-    position: absolute;
-    z-index: 2;
-    border-radius: 6px;
-    border: 1px solid #DDD;
-    background: #FFF;
-    width: 446px;
-    margin-bottom: 8px;
-    display: flex;
-    flex-direction: column;
-}
-.custom2 {
-    cursor: pointer;
-    padding: 20px 26px;
-    /* border-radius: 6px; */
-    border-bottom: 1px #DDD solid;
-}
-.custom2:hover {
-    background-color: #1876F2;
-    color: #FFF;
-    border-bottom: none;
+    .selectCategory_box1 {
+        width: 290px;
+    }
+    .custom1 {
+        width: 290px;
+    }
 }
