--- a/src/pages/HowToBuyProduct/styles.module.css
+++ b/src/pages/HowToBuyProduct/styles.module.css
@@ -1,5 +1,6 @@
 .container {
   padding-bottom: 250px;
+  padding-top: 100px;
 }
 
 .wrapper {
@@ -87,8 +88,11 @@
 
 @media screen and (max-width: 900px) {
   .container {
-    padding-top: 100px;
+    padding-top: 60px;
     padding-bottom: 90px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .wrapper {
@@ -119,6 +123,7 @@
     border: none;
     margin: 0;
     padding: 0;
+    margin-bottom: 50px;
   }
 
   .item {
@@ -140,6 +145,6 @@
     align-items: center;
   }
   .wrapper {
-    margin-top: 97px;
+    /* margin-top: 97px; */
   }
 }
