--- a/src/pages/ForCompanies/styles.module.css
+++ b/src/pages/ForCompanies/styles.module.css
@@ -1,5 +1,6 @@
 .container {
   padding-bottom: 250px;
+  padding-top: 100px;
 }
 
 .wrapper {
@@ -39,7 +40,10 @@
 
 @media screen and (max-width: 700px) {
   .container {
-    padding-top: 50px;
+    padding-top: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   .wrapper {
     flex-direction: column-reverse;
