--- a/src/components/Carousel/styles.module.css
+++ b/src/components/Carousel/styles.module.css
@@ -7,6 +7,7 @@
 .customPrevButton {
   position: absolute;
   top: 155px;
+  left: 0;
   margin-left: -33px;
   width: 66px;
   height: 66px;
@@ -25,7 +26,7 @@
   position: absolute;
   top: 155px;
   right: 0;
-  margin-right: -33px;
+  margin-right: -20px;
   width: 66px;
   height: 66px;
   display: flex;
