--- a/src/pages/Home/components/ProductCategory/styles.module.css
+++ b/src/pages/Home/components/ProductCategory/styles.module.css
@@ -23,17 +23,23 @@
   bottom: 0;
 }
 .productImage2_bg {
-  width: 70px;
+  /* width: 70px;
   height: 70px;
   background-image: url(@assets/images/tshirtsmallRound.png);
   border-radius: 50%;
-  margin-bottom: 18px;
+  margin-bottom: 18px; */
+  
 }
 .productImage2_bg img {
-  width: 70px;
-  height: 70px;
+  width: 270px;
+  height: 75px;
   object-fit: cover;
   object-position: center center;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+}
+.categoryContent {
+  padding: 0 20px;
 }
 
 .productCategory_box {
@@ -48,8 +54,9 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  margin-bottom: 23px;
-  width: 250px;
+  /* margin-bottom: 23px; */
+  padding: 10px 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 }
 .productCategory_text {
   color: #000;
@@ -57,12 +64,20 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  margin-bottom: 12px;
+  /* margin-bottom: 12px; */
+  padding: 20px;
   cursor: pointer;
+}
+.productCategory_text:hover {
+  background-color: #f3f4f5;
 }
 .productCategory_card {
   /* margin-right: 76px; */
   margin-bottom: 81px;
+  border: 1px solid rgba(0, 0, 0, 0.12);
+  border-radius: 8px;
+  width: 272px;
+  height: 400px;
 }
 
 @media screen and (max-width: 870px) {
@@ -78,6 +93,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+    margin-bottom: 0;
   }
   .productCategory_box {
     align-items: center;
