--- a/src/pages/ProductInfo/ProductComment/styles.module.css
+++ b/src/pages/ProductInfo/ProductComment/styles.module.css
@@ -16,7 +16,7 @@
     font-weight: 500;
     line-height: 20px;
     cursor: pointer;
-    border-top: 2px solid #1876F2;
+    border-top: 2px solid c;
     padding-top: 18px;
     margin-top: -1px;
 }
