--- a/src/layouts/mainLayout/components/Header/styles.module.css
+++ b/src/layouts/mainLayout/components/Header/styles.module.css
@@ -122,7 +122,7 @@
 
 .menuBtn {
   display: none;
-  padding: 18px;
+  padding: 10px;
   margin-left: 8px;
   border-radius: 6px;
   border: 1px solid #E1E1E1;
@@ -131,21 +131,26 @@
 .headerMiniLogo {
   width: 60px;
 }
+.headerLogo {
+  height: 100px;
+}
 
 @media screen and (max-width: 1270px){
   .header {
     padding: 20px 20px;
   }
-}
-
-@media screen and (max-width: 1150px) {
   .menuBtn {
     display: block;
   }
-
   .navbar {
     display: none;
   }
+}
+
+@media screen and (max-width: 1150px) {
+  
+
+  
 }
 
 @media screen and (max-width: 640px) {
@@ -161,5 +166,14 @@
 @media screen and (min-width: 701px) {
   .headerMiniLogo {
     display: none;
+  }
+}
+@media screen and (max-width: 800px) {
+  .headerLogo {
+    height: 100px;
+  }
+  .languageChange_select1 {
+    margin-right: 2px;
+    gap: 1px;
   }
 }
