--- a/src/pages/CompanyInfo/styles.module.css
+++ b/src/pages/CompanyInfo/styles.module.css
@@ -11,7 +11,7 @@
     font-style: normal;
     font-weight: 500;
     line-height: 20px; 
-    border-bottom: 2px solid #accf5d;
+    border-bottom: 2px solid #1876f2;
     user-select: none;
 }
 .notActive {
