--- a/src/pages/Producers/components/Filter/FilterGroup/styles.module.css
+++ b/src/pages/Producers/components/Filter/FilterGroup/styles.module.css
@@ -46,9 +46,28 @@
     border-radius: 4px;
     border: 1px solid #DDD;
     background-color: #FFF;
+    width: 728px;
+    margin-top: 15px;
+}
+.filterContent {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding: 20px 30px;
 }
 @media screen and (max-width: 640px) {
     .filter {
         width: 355px;
+    }
+    .filterTool {
+        width: 355px;
+    }
+}
+@media screen and (max-width: 360px) {
+    .filter {
+        width: 290px;
+    }
+    .filterTool {
+        width: 290px;
     }
 }
