--- a/src/pages/Producers/components/Filter/styles.module.css
+++ b/src/pages/Producers/components/Filter/styles.module.css
@@ -196,3 +196,12 @@
     }
     
 }
+@media screen and (max-width: 360px) {
+    .filterGroup {
+        width: 290px;
+    }
+    .searchInput_box {
+        width: 290px;
+    }
+    
+}
