--- a/src/pages/Home/components/Hero/styles.module.css
+++ b/src/pages/Home/components/Hero/styles.module.css
@@ -48,6 +48,16 @@
   background-color: #1876F2;
   border-radius: 8px;
   padding: 15px 20px;
+  cursor: pointer;
+}
+
+.image {
+  width: 46px;
+  height: 46px;
+  object-fit: cover;
+  object-position: center center;
+  border: 1px solid #E1E1E1;
+  border-radius: 50%;
 }
 .searchResult {
   padding: 20px 18px;
@@ -55,21 +65,22 @@
   max-width: 334px;
   border-radius: 8px;
   margin-top: 5px;
-  display: flex;
   flex-direction: column;
   gap: 18px;
-  display: none;
 }
 .searchResult_item {
   display: flex;
   align-items: center;
   gap: 6px;
+  cursor: pointer;
+}
+.searchResult_item:hover {
+  background-color: #F5F5F5;
 }
 .searchCompany_name {
   overflow: hidden;
   color: #000;
   text-overflow: ellipsis;
-  font-family: SF Pro Display;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
@@ -79,7 +90,6 @@
   overflow: hidden;
   color: #121212;
   text-overflow: ellipsis;
-  font-family: SF Pro Display;
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
