--- a/src/pages/Producers/components/Filter/PlaceFilter/styles.module.css
+++ b/src/pages/Producers/components/Filter/PlaceFilter/styles.module.css
@@ -1,3 +1,11 @@
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    height: 200px;
+    overflow-y: auto;
+}
+
 .checkbox {
     display: flex;
     max-width: 211px;
@@ -6,7 +14,6 @@
 }
 .checkboxLabel {
     color: #000;
-    font-family: SF Pro Display;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
