--- a/src/pages/Product/styles.module.css
+++ b/src/pages/Product/styles.module.css
@@ -1,7 +1,7 @@
 .filterBlock {
     display: flex;
     padding-top: 46px;
-    padding-bottom: 100px;
+    padding-bottom: 600px;
 }
 @media screen and (max-width: 1150px) {
     .filterBlock {
@@ -13,7 +13,9 @@
         justify-content: center;
         align-items: center;
         margin-bottom: 56px;
+        position: relative;
     }
+    
 }
 @media screen and (max-width: 670px) {
     .filterbox {
