--- a/src/pages/ProductInfo/ProductImage/styles.module.css
+++ b/src/pages/ProductInfo/ProductImage/styles.module.css
@@ -4,6 +4,7 @@
     max-width: 503px;
     border-radius: 4px;
     border: 1px solid #E1E1E1;
+    max-height: 392px;
 }
 .productImage {
     width: 501px;
