--- a/src/components/ContactUs/styles.module.css
+++ b/src/components/ContactUs/styles.module.css
@@ -75,3 +75,11 @@
     width: 355px;
   }
 }
+@media screen and (max-width: 400px) {
+  .wrapper {
+    width: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
