--- a/src/pages/FAQ/styles.module.css
+++ b/src/pages/FAQ/styles.module.css
@@ -2,10 +2,6 @@
   padding: 120px 0 190px;
 }
 
-.wrapper {
-
-}
-
 .header {
   display: flex;
   align-items: center;
@@ -24,7 +20,10 @@
 
 @media screen and (max-width: 550px) {
   .container {
-    padding-top: 50px;
+    padding-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   .header {
     flex-direction: column-reverse;
