--- a/src/pages/Home/components/Trust/styles.module.css
+++ b/src/pages/Home/components/Trust/styles.module.css
@@ -12,7 +12,9 @@
 }
 .aboutImages {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 100px;
+  /* justify-content: space-between; */
 }
 @media screen and (max-width: 820px) {
   .trustContainer {
