--- a/src/pages/Payment/styles.module.css
+++ b/src/pages/Payment/styles.module.css
@@ -58,4 +58,10 @@
   .desc {
     max-width: 100%;
   }
+  .container {
+    padding-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
