--- a/src/pages/Product/components/Sort/style.module.css
+++ b/src/pages/Product/components/Sort/style.module.css
@@ -3,6 +3,7 @@
     border: 1px solid #EEE;
     padding: 35px 56px 34px 20px;
     width: 292px;
+    position: relative;
 }
 .sortTitle {
     color: #1F1914;
@@ -12,6 +13,7 @@
     font-weight: 600;
     line-height: 24px;
     margin-bottom: 31px;
+    text-align: center;
 }
 .closeButton {
     display: flex;
@@ -30,6 +32,28 @@
 @media screen and (max-width: 1150px) {
     .checkboxes {
         display: none;
+        flex-direction: column;
+        position: absolute;
+        border-radius: 4px;
+        border: 1px solid #DDD;
+        background: #FFF;
+        width: 728px;
+        padding: 53px 46px;
+        margin-left: -396px;
+        margin-top: 30px;
+    }
+    
+    .showFilter {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        border-radius: 4px;
+        border: 1px solid #DDD;
+        background: #FFF;
+        width: 728px;
+        padding: 53px 46px;
+        margin-left: -396px;
+        margin-top: 30px;
     }
     .closeButton {
         display: none;
@@ -37,14 +61,30 @@
     .sortBox {
         width: 354px;
         padding: 20px;
-        text-align: center;
     }
     .sortTitle {
         margin-bottom: 0;
     }
 }
+@media screen and (max-width: 710px) {
+    /* .checkboxes {
+        width: 600px;
+
+    } */
+}
+
+@media screen and (max-width: 670px) {
+    .showFilter {
+        width: 354px;
+        margin-left: -21px;
+    }
+}
 @media screen and (max-width: 370px) {
     .sortBox {
-        width: 310px;
+        width: 290px;
     }
+    .showFilter {
+        width: 290px;
+    }
+
 }
