--- a/src/pages/Home/components/ProductCategory/styles.module.css
+++ b/src/pages/Home/components/ProductCategory/styles.module.css
@@ -71,7 +71,7 @@
   border: 1px solid rgba(0, 0, 0, 0.12);
   border-radius: 8px;
   width: 272px;
-  height: 388px;
+  min-height: 388px;
 }
 
 @media screen and (max-width: 870px) {
