fix product categoryslider

--- a/src/pages/Home/components/ProductCategory/styles.module.css
+++ b/src/pages/Home/components/ProductCategory/styles.module.css
@@ -76,11 +76,11 @@
 
 @media screen and (max-width: 870px) {
   .productCategoryContainer {
-    text-align: center;
+    /* text-align: center; */
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
   }
   .productCategory_card {
     display: flex;
@@ -108,7 +108,8 @@
     margin-bottom: 0;
   }
   .productCategory_title {
-    width: 310px;
+    /* width: 310px; */
+    text-align: center;
   }
 }
 @media screen and (max-width: 370px) {
