--- a/src/pages/ProductInfo/ProductDeatails/styles.module.css
+++ b/src/pages/ProductInfo/ProductDeatails/styles.module.css
@@ -66,3 +66,8 @@
         flex-wrap: wrap;
     }
 } 
+@media screen and (max-width: 400px) {
+    .productName {
+        max-width: 300px;
+    }
+}
