--- a/src/pages/ReturnPolicy/styles.module.css
+++ b/src/pages/ReturnPolicy/styles.module.css
@@ -46,8 +46,15 @@
   }
   .content {
     flex-direction: column-reverse;
+    max-width: 350px;
+   
   }
-
+  .wrapper {
+    max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   .title {
     text-align: center;
     font-size: 32px;
@@ -59,5 +66,13 @@
   }
   .list {
     margin-bottom: 60px;
+    max-width: 350px;
+    /* padding-left: 0; */
+  }
+
+}
+@media screen and (max-width: 340px) {
+  .list {
+    max-width: 300px;
   }
 }
