--- a/src/pages/Product/components/Products/styles.module.css
+++ b/src/pages/Product/components/Products/styles.module.css
@@ -2,6 +2,7 @@
     text-align: center;
     margin-bottom: 18px;
     cursor: pointer;
+    max-width: 292px;
 }
 .productImage {
     margin-bottom: 17px;
