--- a/src/pages/Services/styles.module.css
+++ b/src/pages/Services/styles.module.css
@@ -31,6 +31,9 @@
 .servicePrice {
     margin-bottom: 20px;
 }
+.serviceText {
+    height: 266px;
+}
 .serviceButton {
     width: 280px;
     padding: 10px;
@@ -39,6 +42,7 @@
     cursor: pointer;
     border-radius: 0 0 8px 8px;
     font-size: 16px;
+    bottom: 0;
 }
 @media screen and (max-width: 1150px) {
     .serviceBox {
