--- a/src/pages/ProductInfo/CompanyContact/styles.module.css
+++ b/src/pages/ProductInfo/CompanyContact/styles.module.css
@@ -1,10 +1,3 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v8.4.14,
-* Autoprefixer: v10.4.7
-* Browsers: last 4 version
-*/
-
 .companyContact {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -57,12 +50,14 @@
 .mailButton {
     border-radius: 6px;
     background: #1876F2;
-    padding: 20px 33px;
+    padding: 15px 20px;
     color: #FFF;
     font-size: 18px;
     font-style: normal;
     font-weight: 500;
     line-height: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
     -ms-flex-align: center;
@@ -77,7 +72,7 @@
     font-size: 18px;
     font-weight: 500;
     line-height: 20px;
-    padding: 20px 22px;
+    padding: 15px 20px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -90,9 +85,35 @@
 .companyImg {
     width: 77px;
     height: 77px;
-    object-fit: cover;
-    object-position: center center;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: center center;
+       object-position: center center;
     border-radius: 50%;
+}
+.btnWrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 10px;
+}
+.btn {
+    padding: 15px 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border-radius: 6px;
+}
+.primary {
+    background-color: #1876F2;
+    color: #FFF;
 }
 @media screen and (max-width: 1150px) {
     .companyContact {
@@ -108,27 +129,21 @@
         max-width: 355px;
         padding: 33px 16px;
     }
-    .mailButton {
-        width: 323px;
-    }
-    .phoneButton {
-        width: 323px;
-    }
 } 
 @media screen and (max-width: 440px) {
     .companyContact {
         max-width: 300px;
     }
-    .mailButton {
-        width: 270px;
-    }
-    .phoneButton {
-        width: 270px;
-    }
     .requestPopUp {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        align-items: center;
-        justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
 
     }
 }
