--- a/src/pages/Home/components/Trust/styles.module.css
+++ b/src/pages/Home/components/Trust/styles.module.css
@@ -1,5 +1,5 @@
 .trustContainer {
-  padding-top: 150px;
+  padding-top: 100px;
   padding-bottom: 112px;
 }
 .trustTitle {
@@ -15,6 +15,10 @@
   flex-wrap: wrap;
   gap: 100px;
   /* justify-content: space-between; */
+}
+.trustImage {
+  width: 200px;
+  height: 120px;
 }
 @media screen and (max-width: 820px) {
   .trustContainer {
