--- a/src/layouts/mainLayout/components/Header/styles.module.css
+++ b/src/layouts/mainLayout/components/Header/styles.module.css
@@ -31,7 +31,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  width: 100%;
+  /* width: 100%; */
 }
 .languageChange {
   display: flex;
