--- a/src/components/ProductCard/styles.module.css
+++ b/src/components/ProductCard/styles.module.css
@@ -57,6 +57,12 @@
   margin-bottom: 14px;
 }
 
+.company {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 10px;
+}
 @media screen and (max-width: 820px) {
   .newProduct_card {
     width: 100%;
